--- a/Scripts/Final_Scripts/1_studyarea_delineation.Rmd
+++ b/Scripts/Final_Scripts/1_studyarea_delineation.Rmd
@@ -31,7 +31,7 @@ I use the Mapbiomas vegetation product that is commonly used across Brazil and i
 This product is at 30m spatial resolution, derived from Landsat imagergy. In GEE, I completed 
 processing this data such that the resulting product is a multiband image at 1km resolution,
 where each band denotes a year (1985-2023) and each pixel value is a proportion. The 
-proportion is the % of total Mapbiomas pixels within the 1km pixel that are anthropic (as per
+proportion is the % of total Mapbiomas pixels within the 1km & 5km pixel that are anthropic (as per
 Mapbiomas typology)
 https://code.earthengine.google.com/f7e17500a39018685d022f079335ac51
 
@@ -43,11 +43,22 @@ d_trans<- st_transform(d_trans, crs = 4326)
 d_trans<- d_trans %>% mutate(area_km= terra::expanse(vect(d_trans), unit="km"))
 cerrado<- d_trans %>% st_union()
 
-#Mapbiomas mask
-mapbiomas_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "Mapbiomass_anthropic_LULC_mask.tif"))
+#Mapbiomas mask at 1km resolution
+# mapbiomas_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "Mapbiomass_anthropic_LULC_mask.tif"))
+# Sys.time(); mapbiomas_crop<- terra::crop(mapbiomas_anthropic, cerrado)
+# mapbiomas_mask<- terra::mask(mapbiomas_crop, vect(cerrado)); Sys.time()
+# remove(mapbiomas_anthropic, mapbiomas_crop)
+
+#5km resolution
+mapbiomas_anthropic<- rast(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "Mapbiomass_anthropic_LULC_mask_5km.tif"))
 Sys.time(); mapbiomas_crop<- terra::crop(mapbiomas_anthropic, cerrado)
 mapbiomas_mask<- terra::mask(mapbiomas_crop, vect(cerrado)); Sys.time()
 remove(mapbiomas_anthropic, mapbiomas_crop)
+mapbiomas_mask #resolution is 0.044 deg. 
+
+#To align with stability rasters at 0.05 degrees, resampling
+ndvi_agg_stability<- rast(here("Outputs", "Final_TrajShape_Models", "Annual_NDVI", "agg_stability_masked_ndvi_11_trajresults.tif"))
+mapbiomas_mask<- terra::resample(mapbiomas_mask, ndvi_agg_stability)
 
 #1. Animation of anthropic areas through time
 library(magick) #for animation
@@ -65,7 +76,7 @@ mapbiomas_animation_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
               tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
   tm_shape(d_trans)+ tm_borders()
   
-tic();tmap_animation(mapbiomas_animation_map, filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "Mapbiomass_anthropic_LULC_mask.gif"),
+tic();tmap_animation(mapbiomas_animation_map, filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "Mapbiomass_anthropic_5km_LULC_mask.gif"),
                delay = 50, loop = TRUE, restart.delay = 500,
                width = 900, height = 900, dpi = 150) ;toc() 
 remove(neighbors, map_extent, mapbiomas_animation_map)
@@ -144,7 +155,7 @@ p<- p+scale_color_brewer(labels= c("Central", "Eastern", "Southern"), palette = 
   theme_classic()+
   theme(legend.title=element_blank())+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
-ggsave(here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "area_anthropic.png"),p, 
+ggsave(here("Data", "Masks_to_define_pixelsofinterest", "Mapbiomas_anthropic_mask", "area_anthropic_5km.png"),p, 
        dpi=700, height = 12, width = 12, units = "cm")
 remove(p, pivot_area_anthropic_df, area_anthropic_df)
 
@@ -172,7 +183,7 @@ q<- q+scale_color_brewer(labels= c("Central", "Eastern", "Southern"), palette = 
   theme_classic()+
   theme(legend.title=element_blank())+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
-ggsave(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "fraction_anthropic_boxplot.png"),q, 
+ggsave(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "fraction_anthropic_5km_boxplot.png"),q, 
        dpi=700, height = 20, width = 20, units = "cm")
 remove(q, pivot_boxplot_df, boxplot_df)
 
@@ -194,7 +205,7 @@ r<- r+scale_color_brewer(labels= c("Central", "Eastern", "Southern"), palette = 
   theme_classic()+
   theme(legend.title=element_blank())+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
-anim_save(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "histogram_%anthropic_no0&1.gif"),r)
+anim_save(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "histogram_%anthropic_5km_no0&1.gif"),r)
 remove(r, histogram_df, pivot_histogram_df)
 
 ```
@@ -230,53 +241,41 @@ for (i in x_thresholds){
   print ("App function complete")
   
   writeRaster(threshold_mapbiomas_mask, here("Data", "Masks_to_define_pixelsofinterest", 
-                                             "Mapbiomas_anthropic_mask","thresholded_mapbiomas_masks", paste0("thresholded_masks_",i, ".tif")))
+                                             "Mapbiomas_anthropic_mask","5km_thresholded_mapbiomas_masks", paste0("5km_thresholded_masks_",i, ".tif")))
                                              
   print ("Next i")
 }
 
 threshold_function<- function (x){
-  ifelse(max(x)>i, NA, x) #change threshold to 0.1,0.2....
+  ifelse(max(x)>0.3, NA, x) #change threshold to 0.1,0.2....
   }
 
 Sys.time(); threshold_mapbiomas_mask_10<- terra::app(tp_mapbiomas_mask, fun= threshold_function); Sys.time()#1min
-#writeRaster(threshold_mapbiomas_mask_10, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_10.tif"))
+#writeRaster(threshold_mapbiomas_mask_10, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "5km_thresholded_mapbiomas_mask_10.tif"))
 Sys.time(); threshold_mapbiomas_mask_20<- terra::app(tp_mapbiomas_mask, fun= threshold_function); Sys.time()#1min
-#writeRaster(threshold_mapbiomas_mask_20, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_20.tif"))
+#writeRaster(threshold_mapbiomas_mask_20, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "5km_thresholded_mapbiomas_mask_20.tif"))
 Sys.time(); threshold_mapbiomas_mask_30<- terra::app(tp_mapbiomas_mask, fun= threshold_function); Sys.time()#1min
-#writeRaster(threshold_mapbiomas_mask_30, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "thresholded_mapbiomas_mask_30.tif"))
+#writeRaster(threshold_mapbiomas_mask_30, here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "5km_thresholded_mapbiomas_mask_30.tif"))
 remove(threshold_function)
 
-#3. Example map of thresholded rasters
-#lines 51- 57
-thresh10_mapbiomas_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
-  tm_shape( threshold_mapbiomas_mask_10)+
-  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title="10% threshold") + 
+threshold_map_function<- function (thresholded_raster, title){
+  tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
+  tm_shape( threshold_raster)+
+  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title=title) + 
               tm_layout (legend.position = c("left", "bottom"))+
               tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
   tm_shape(d_trans)+ tm_borders()
+}
 
-thresh20_mapbiomas_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
-  tm_shape( threshold_mapbiomas_mask_20)+
-  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title="20% threshold") + 
-              tm_layout (legend.position = c("left", "bottom"))+
-              tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
-  tm_shape(d_trans)+ tm_borders()
+map_thresh10_mapbiomas<- threshold_map_function(threshold_mapbiomas_mask_10, "10% threshold")
+map_thresh20_mapbiomas<- threshold_map_function(threshold_mapbiomas_mask_10, "20% threshold")
+map_thresh30_mapbiomas<- threshold_map_function(threshold_mapbiomas_mask_10, "30% threshold")
 
-
-thresh30_mapbiomas_map<-tm_shape(neighbors, bbox = map_extent)+ tm_borders()+
-  tm_shape( threshold_mapbiomas_mask_30)+
-  tm_raster(style = 'cont',palette= get_brewer_pal("Reds"), n=5, breaks = seq(0,0.3,0.05), title="30% threshold") + 
-              tm_layout (legend.position = c("left", "bottom"))+
-              tm_facets(nrow=1, ncol=1, free.coords = FALSE)+
-  tm_shape(d_trans)+ tm_borders()
-
-all_maps<- tmap_arrange(thresh10_mapbiomas_map, thresh20_mapbiomas_map, thresh30_mapbiomas_map)
+all_maps<- tmap_arrange(map_thresh10_mapbiomas, map_thresh20_mapbiomas, map_thresh30_mapbiomas)
 tic();tmap_save(all_maps, 
-filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "threshold_Mapbiomass_anthropic_LULC_mask.png"),
+filename = here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "5km_threshold_Mapbiomass_anthropic_LULC_mask.png"),
                width = 900, height = 900, dpi = 150) ;toc() 
-remove(neighbors, map_extent, thresh10_mapbiomas_map, thresh20_mapbiomas_map, thresh30_mapbiomas_map, all_maps)
-
+remove(threshold_map_function, neighbors, map_extent, map_thresh10_mapbiomas, map_thresh20_mapbiomas, map_thresh30_mapbiomas, all_maps)
 
 #4. Area after excluding pixels with >10%, >20% and 30% anthropic (anytime)
 calc_df<- calc_df %>% dplyr::select(-c(central_values, southern_values, eastern_values))
@@ -301,7 +300,7 @@ for(i in 1:nlyr(threshold_mapbiomas_mask_30)){
 calc_df<- calc_df %>% mutate(thresh30_anthropic_raster= list_threshold30_rasters)
 remove(list_threshold30_rasters,i)
 
-#lines 80-94
+#lines 93-107
 Sys.time(); calc_df<- calc_df %>% mutate(threshold10_central= purrr::map(thresh10_anthropic_raster, central_cropmask_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(threshold10_southern= purrr::map(thresh10_anthropic_raster, southern_cropmask_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(threshold10_eastern= purrr::map(thresh10_anthropic_raster, eastern_cropmask_function)); Sys.time()
@@ -315,7 +314,7 @@ Sys.time(); calc_df<- calc_df %>% mutate(threshold30_southern= purrr::map(thresh
 Sys.time(); calc_df<- calc_df %>% mutate(threshold30_eastern= purrr::map(thresh30_anthropic_raster, eastern_cropmask_function)); Sys.time()
 remove(central_cropmask_function, southern_cropmask_function, eastern_cropmask_function)
 
-#lines 100-102
+#lines 113-115
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_central_reclass= purrr::map(threshold10_central, reclass_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_southern_reclass= purrr::map(threshold10_southern, reclass_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_eastern_reclass= purrr::map(threshold10_eastern, reclass_function)); Sys.time()
@@ -329,7 +328,7 @@ Sys.time(); calc_df<- calc_df %>% mutate(thresh30_southern_reclass= purrr::map(t
 Sys.time(); calc_df<- calc_df %>% mutate(thresh30_eastern_reclass= purrr::map(threshold30_eastern, reclass_function)); Sys.time()
 remove(reclass_function)
 
-#lines 108-110
+#lines 121-123
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_central_anthropic_areakm= purrr::map(thresh10_central_reclass, area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_southern_anthropic_areakm= purrr::map(thresh10_southern_reclass, area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_eastern_anthropic_areakm= purrr::map(thresh10_eastern_reclass, area_function)); Sys.time()
@@ -343,7 +342,7 @@ Sys.time(); calc_df<- calc_df %>% mutate(thresh30_southern_anthropic_areakm= pur
 Sys.time(); calc_df<- calc_df %>% mutate(thresh30_eastern_anthropic_areakm= purrr::map(thresh30_eastern_reclass, area_function)); Sys.time()
 remove(area_function)
 
-#lines 116-118
+#lines 129-131
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_central_anthropic_totalareakm= purrr::map(thresh10_central_anthropic_areakm, total_area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_southern_anthropic_totalareakm= purrr::map(thresh10_southern_anthropic_areakm, total_area_function)); Sys.time()
 Sys.time(); calc_df<- calc_df %>% mutate(thresh10_eastern_anthropic_totalareakm= purrr::map(thresh10_eastern_anthropic_areakm, total_area_function)); Sys.time()
@@ -418,7 +417,7 @@ pivot_thresharea_anthropic_df<- pivot_wider(pivot_thresharea_anthropic_df, names
 #through time. 
 
 
-#lines 108-135
+#lines 85-148
 pivot_area_anthropic_df<- pivot_area_anthropic_df %>% 
   separate_wider_delim(cols = name, delim = "_", names = c("Zone", "Percent","Anthropic"))
 pivot_area_anthropic_df<- pivot_area_anthropic_df %>% dplyr::select(-c(Percent, Anthropic))
@@ -438,12 +437,8 @@ s<- s+scale_color_brewer(labels= c("Central", "Eastern", "Southern"), palette = 
   theme_classic()+
   theme(legend.title=element_blank())+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
-ggsave(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "threshold_before_after_area.png"),s, 
+ggsave(here("Data", "Masks_to_define_pixelsofinterest", "mapbiomas_anthropic_mask", "5km_threshold_before_after_area.png"),s, 
        dpi=700, height = 25, width = 25, units = "cm")
-
-mean(pivot_df$value1[pivot_df$Zone=="central"])# 12.09981
-mean(pivot_df$value1[pivot_df$Zone=="southern"]) #7.533759
-mean(pivot_df$value1[pivot_df$Zone=="eastern"]) #10.33583
 
 remove(pivot_area_anthropic_df, pivot_df, pivot_thresharea_anthropic_df)
 remove(s)
